--- a/src/app/_samples/mediaco/components/todo/todo.component.scss
+++ b/src/app/_samples/mediaco/components/todo/todo.component.scss
@@ -23,7 +23,7 @@ $btn-text-color: #5c4498;
 
   position: absolute;
   z-index: 10;
-  left: 29%;
+  left: 30%;
   top: 15rem;
 }
 
